<resources>
    <string name="app_name">vuk_vukovic_rn9420</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    
    <string name="cart">Shopping Cart</string>

    <string name="search">Search</string>
    
    <string name="price">Price:</string>
    <string name="discount">Discount:</string>
    <string name="rating">Rating:</string>
    <string name="brand">Brand:</string>
    <string name="category">Category:</string>

    <string name="add_to_cart">Add To Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="pay">Pay</string>
    <string name="amount">Amount:</string>
</resources>