<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/usernameEditText"
        android:hint="@string/username"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordEditText"
        android:layout_margin="10dp">
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        android:layout_margin="10dp">
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:background="@drawable/rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:layout_marginBottom="200dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>