<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imagesRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="24sp">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintBottom_toTopOf="@+id/scrollDetails">
    </androidx.recyclerview.widget.RecyclerView>

    <ScrollView
        android:id="@+id/scrollDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagesRecyclerView"
        app:layout_constraintBottom_toTopOf="@+id/addToCartButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:text="@string/price"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/priceProductText"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:text="@string/discount"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/discountProductText"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:text="@string/rating"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/ratingProductText"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:text="@string/brand"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/brandProductText"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:text="@string/category"
                    android:textSize="18sp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/categoryProductText"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionProductText"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">
            </TextView>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addToCartButton"
        android:text="@string/add_to_cart"
        android:background="@drawable/rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollDetails">
    </Button>

    <ProgressBar
        android:id="@+id/productProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>